// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Link Component Link renders external link with tooltip 1`] = `
<div>
  <div
    class="container"
  >
    <div>
      partial url
      _blank
      TEXT
      <div>
        TOOLTIP
      </div>
      <i
        class="icon icon"
        icon="fal,external-link"
      />
    </div>
  </div>
</div>
`;

exports[`Link Component Link renders internal link 1`] = `
<div>
  <div
    class="container"
  >
    <div>
      partial url
      TEXT
    </div>
  </div>
</div>
`;
